# TerminalTiler

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs  deny.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  create-release-tag.yml  package-artifacts.yml  release.yml
docs/: core-boundary.md  kanban-board.md  mcp-runtime-control.md  voice-parakeet.md  windows-gtk-visual-qa.md
packaging/: assert-windows-installer-tools.ps1  build-appimage.sh  build-deb.sh  build-in-container.sh  build-linux-release.sh  build-win.bat  build-windows-gtk-smoke.ps1  build-windows.ps1  bundle-runtime.sh  capture-linux-gtk-visuals.sh  capture-windows-gtk-visuals.ps1  capture-windows-release-gtk-visuals.ps1  compare-gtk-visuals.sh  create-release-tag.sh  install-ubuntu-workflow-deps.sh  linux-build-prereqs.sh  release-smoke-test.sh  release-verify.sh  render-icons.sh  resolve-package-version.sh  run-bundled.sh  setup-windows-gtk.ps1  validate-metadata.sh  versioning.sh  voice-pack-verify.sh  windows-installer-tools.ps1  windows-smoke-test.ps1
packaging/appimage/: AppRun
packaging/container/debian12/: Dockerfile
packaging/container/debian13/: Dockerfile
packaging/deb/DEBIAN/: control
packaging/windows/: installer.nsi  installer.wxs  portable.nsi
resources/: app.terminaltiler.desktop  app.terminaltiler.metainfo.xml  dev.zethrus.terminaltiler.appdata.xml  style.css  terminaltiler.desktop
resources/voice/parakeet/: manifest.toml  parakeet_engine.py
resources/windows/: terminaltiler.rc
src/: app_paths.rs  dropped_paths.rs  extension.rs  lib.rs  logging.rs  main.rs  open_core.rs  pro.rs  product.rs  runtime_control.rs  stats_hub.rs  terminal_palette.rs  transcript.rs  tray.rs  update.rs
src/app/: logging.rs  mod.rs  tray.rs
src/gtk_shell/: mod.rs
src/mcp/: mod.rs  tools.rs
src/model/: agent_run.rs  assets.rs  board.rs  board_workspace.rs  layout.rs  mod.rs  preset.rs  workspace_config.rs
src/open_core/: workspace_registry.rs
src/platform/: common.rs  mod.rs  process.rs  wsl_paths.rs
src/services/: agent_config.rs  agent_orchestrator.rs  agent_resume.rs  alerts.rs  assets_editor.rs  board.rs  broadcast.rs  launch_resolution.rs  layout_editor.rs  mod.rs  output_helpers.rs  project_suggestions.rs  review_dispatch.rs  runbooks.rs  session_restore.rs  snippets.rs  stats.rs  template_variables.rs  terminal_history.rs  tile_draft.rs  tile_navigation.rs
src/services/session_title/: claude.rs  codex.rs  copilot.rs  grok.rs  mod.rs  opencode.rs  util.rs
src/storage/: asset_store.rs  board_store.rs  board_workspace_store.rs  document.rs  fs_utils.rs  mod.rs  preference_store.rs  preset_store.rs  secret_store.rs  session_store.rs  stats_store.rs  workspace_config_store.rs
src/terminal/: mod.rs  session.rs  transcript.rs
src/ui/: about_dialog.rs  agent_setup_dialog.rs  app_chrome.rs  appearance.rs  assets_manager.rs  board_chrome.rs  board_drag.rs  board_view.rs  command_palette.rs  companion_dialog.rs  context_menu.rs  dialog_chrome.rs  dialog_form.rs  dialog_smoke.rs  header_actions.rs  icons.rs  launch_screen.rs  layout_tree.rs  mcp_health_panel.rs  mod.rs  new_task_dialog.rs  pane_status.rs  pane_zoom.rs  runbook_controls.rs  runbook_dialog.rs  settings_dialog.rs  shortcuts_dialog.rs  snippet_popover.rs  stats_dialog.rs  tab_rename_dialog.rs  task_detail_dialog.rs  terminal_context_menu.rs  terminal_recovery_popover.rs  tile_chrome.rs  tile_drag.rs  tile_view.rs  title_chrome.rs  transcript_dialog.rs  update_dialog.rs  voice_hud.rs  (+10 more)
src/voice/: audio.rs  controller.rs  engine.rs  hotkey.rs  linux_global_hotkey.rs  mod.rs  pack.rs  preferences.rs  process.rs  transcriber.rs
src/windows/: alert_center.rs  app.rs  assets_manager.rs  command_palette.rs  gtk_app.rs  gtk_runtime.rs  gtk_tray.rs  gtk_voice_hotkey.rs  launcher_editor.rs  mod.rs  restore_prompt.rs  runbook_dialog.rs  shortcut_capture.rs  theme.rs  transcript_viewer.rs  vt.rs  win32_helpers.rs  workspace.rs  wsl.rs
tests/: mcp_stdio.rs  style_css.rs
