[package]
name = "terminaltiler"
version = "0.2.0"
edition = "2024"
description = "Native tiling terminal workspace launcher for Linux desktops"
homepage = "https://github.com/zethrus/TerminalTiler"
repository = "https://github.com/zethrus/TerminalTiler"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_2"] }
directories = "6.0.0"
gdk = { package = "gdk4", version = "0.11.1", features = ["v4_6"] }
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"] }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
vte4 = "0.10.0"
uuid = { version = "1.18.1", features = ["v4"] }
