[package]
name = "terminaltiler"
version = "0.2.0"
edition = "2024"
description = "Native tiling terminal workspace launcher for Linux desktops"
homepage = "https://github.com/zethrus/TerminalTiler"
repository = "https://github.com/zethrus/TerminalTiler"

[dependencies]
directories = "6.0.0"
keyring = "3.6.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_2"] }
gdk = { package = "gdk4", version = "0.11.1", features = ["v4_6"] }
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"] }
ksni = { version = "0.3", features = ["blocking"] }
libc = "0.2"
vte4 = "0.10.0"
webkit6 = "0.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.35"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
