[package]
name = "terminaltiler"
version = "0.3.0"
edition = "2024"
description = "Native tiling terminal workspace launcher for Linux desktops"
homepage = "https://terminaltiler.app"
repository = "https://github.com/Zethrus/TerminalTiler"
license = "MIT"

# Bundled Kanban board MCP server. Built and packaged alongside the main app so agents
# (Claude/Codex) can be connected with no extra install.
[[bin]]
name = "terminaltiler-mcp"
path = "src/bin/terminaltiler_mcp.rs"

[features]
default = []
voice-cpal = ["dep:cpal"]
full-desktop = ["voice-cpal"]
windows-gtk-shell = ["dep:adw", "dep:gdk", "dep:gtk"]
windows-win32-shell = []

[dependencies]
cpal = { version = "0.17.3", optional = true }
directories = "6.0.0"
keyring = "3.6.3"
regex = "1.12.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
gdk = { package = "gdk4", version = "0.11.1", features = ["v4_6"] }
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"] }
ksni = { version = "0.3", features = ["blocking"] }
libc = "0.2"
vte4 = "0.10.0"
webkit6 = "0.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"], optional = true }
gdk = { package = "gdk4", version = "0.11.1", features = ["v4_6"], optional = true }
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_8"], optional = true }
webview2-com = "0.35"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
